[package]
name = "ProcedualPlanets"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19", features = ["dynamic_linking"] }
noise = "*"
fastrand = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# [profile.release]
# opt-level = 'z'     # Optimiere für Größe
# lto = "fat"         # Link Time Optimization
# codegen-units = 1   # Bessere Optimierung, langsamerer Build
# strip = true        # Symbole entfernen